# semantic_cache

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  test_performance.py
src/: semantic_cache.py
tests/: test_mock.py  test_ollama.py
