[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic_cache"
version = "0.1.0"
description = "A simple semantic cache decorator."
authors = [
    { name = "Someone Else's Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annoy>=1.17.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "openai"
]
